--- a/src/styles/_event.scss
+++ b/src/styles/_event.scss
@@ -1,9 +1,30 @@
+@use "variable";
+
 .event {
   padding: 80px 0;
-  background-image: linear-gradient(#1b6ca7, #442bdb);
+
+  &--frontend {
+    background-image: linear-gradient(variable.$blue1, variable.$blue2);
+  }
+  &--ux-ui {
+    background-image: linear-gradient(variable.$blue2, variable.$pink);
+  }
+  &--data-science {
+    background-image: linear-gradient(variable.$pink, variable.$yellow);
+  }
+  &--backend {
+    background-image: linear-gradient(variable.$yellow, variable.$pink);
+  }
+
+  &--image-left {
+    .container {
+      flex-direction: row-reverse;
+    }
+  }
 
   .container {
     display: flex;
+    gap: 40px;
   }
 
   &__image {
@@ -11,8 +32,6 @@
   }
 
   &__details {
-    margin-right: 40px;
-
     &__title {
       font-size: 18px;
       font-weight: bold;
